# siptty

./: .gitignore  CLAUDE.md  LICENSE.md  Makefile  README.md  docker-compose.test.yml  go.mod  go.sum  index.html  pyproject.toml  siptty.example.toml
Docs/: DESIGN.md  Go-gosip-diago-summary.md  Go-plan-review.md  PJSUA2_INSTALL.md  TASKS.md  TEST_PLAN.md
Docs/plans/: 2026-02-09-go-rewrite-design.md
_python-prototype/docker/: Dockerfile.pjsua2-builder
_python-prototype/research/: hardware-phone-features.md  pjsip-textual-architecture.md  sip-rfcs.md  sip-softphone-features.md
_python-prototype/scripts/: check_pjsua2.py  extract_pjsua2.sh  wait_for_asterisk.py
_python-prototype/src/siptty/: __init__.py
_python-prototype/tests/: conftest.py
_python-prototype/tests/tui/: test_app.py
_python-prototype/tests/unit/: test_events.py
cmd/siptty/: main.go
internal/config/: config.go  config_test.go
internal/engine/: account.go  call.go  engine.go  engine_test.go  events.go
internal/tui/: account_panel.go  app.go  call_panel.go  trace_panel.go
research/: pjsip-textual-architecture.md  sip-softphone-features.md
spike/: main.go
src/siptty/: __main__.py
src/siptty/config/: loader.py
src/siptty/engine/: __init__.py  call.py  core.py  events.py  trace.py
src/siptty/tui/: app.py
tests/: smoke_test.go
tests/asterisk/: extensions.conf  pjsip.conf  voicemail.conf
tests/integration/: test_smoke.py
tests/unit/: test_config.py  test_dtmf.py  test_engine_lifecycle.py
website/: .eleventy.cjs  .eleventy.js  package.json
website/src/: index.njk
(+15 files in other folders)
