[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "siptty"
version = "0.1.0"
description = "A full-featured SIP softphone with a terminal UI"
requires-python = ">=3.11"
license = "MIT"
readme = "README.md"
keywords = ["sip", "voip", "softphone", "tui", "terminal"]
classifiers = [
    "Development Status :: 2 - Pre-Alpha",
    "Environment :: Console",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Communications :: Telephony",
]
dependencies = [
    "textual>=0.50",
]

[project.optional-dependencies]
test = [
    "pytest>=8.0",
    "pytest-asyncio>=0.23",
    "pytest-timeout>=2.2",
    "coverage>=7.0",
]
dev = [
    "ruff>=0.4",
    "mypy>=1.10",
    "textual-dev>=1.5",
]

[project.scripts]
siptty = "siptty.tui.app:main"

[project.urls]
Homepage = "https://github.com/markhagler/siptty"
Repository = "https://github.com/markhagler/siptty"

[tool.hatch.build.targets.wheel]
packages = ["src/siptty"]

[tool.ruff]
line-length = 99
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "W", "I", "UP"]

[tool.mypy]
python_version = "3.11"
strict = true
warn_return_any = true
warn_unused_configs = true

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"
